# rackOS

./: Cargo.toml  Makefile.toml
.cargo/: config.toml
resources/: pi5-specs.txt  pi5.dts
src/: board_core.rs  bootloader.rs  color.rs  console.rs  cpu.rs  display.rs  geometry.rs  io.rs  kernel.rs  main.rs  panic_cfg.rs  print.rs  types.rs
src/__arch__/aarch64/: boot.S  boot.rs
src/__board__/raspberrypi/: color.rs  console.rs  hdmi.rs  mailbox.rs  peripherals.rs  raspberrypi.rs  screen.rs
src/motherboards/: display.rs  mod.rs
src/motherboards/raspberrypi/: console.rs  cpu.rs  hdmi.rs  mailbox.rs  mod.rs
src/processors/: mod.rs
src/processors/aarch64/: mod.rs
